# DeeGStreamer

./: CMakeLists.txt  GStreamer.md  README.md
samples/: 6-basic-tutorial-6  basic-tutorial-02  basic-tutorial-1.c  basic-tutorial-2.c  basic-tutorial-3.c  basic-tutorial-4.c  basic-tutorial-5.c  basic-tutorial-6.c
